Null exposure model. Futureproof by adding separate functions for real IFFT vs IFFT

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "# Image simulator\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import ifft, fftfreqs"
+    "from cryojax.utils import irfft, fftfreqs"
    ]
   },
   {
@@ -119,9 +119,9 @@
     "# Plot models\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = plot_image(ifft(scattering_model()), fig, ax1)\n",
-    "im2 = plot_image(ifft(optics_model()), fig, ax2)\n",
-    "im3 = plot_image(ifft(detector_model()), fig, ax3)\n",
+    "im1 = plot_image(irfft(scattering_model()), fig, ax1)\n",
+    "im2 = plot_image(irfft(optics_model()), fig, ax2)\n",
+    "im3 = plot_image(irfft(detector_model()), fig, ax3)\n",
     "plt.tight_layout()"
    ]
   },
@@ -144,7 +144,7 @@
     "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
     "micrograph = ice.sample(scattering.pixel_size * micrograph_freqs) * optics(micrograph_freqs) + detector.sample(scattering.pixel_size * micrograph_freqs)\n",
     "whiten = cs.WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
-    "plot_image(ifft(whiten(detector_model())), fig, ax)"
+    "plot_image(irfft(whiten(detector_model())), fig, ax)"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(ifft(micrograph).T, origin=\"lower\", cmap=\"gray\")\n",
+    "plt.imshow(irfft(micrograph).T, origin=\"lower\", cmap=\"gray\")\n",
     "plt.colorbar()"
    ]
   },
@@ -174,7 +174,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "filters = [cs.AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), cs.WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
-    "plot_image(ifft(filtered_model.render()), fig, ax)"
+    "plot_image(irfft(filtered_model.render()), fig, ax)"
    ]
   },
   {
@@ -253,10 +253,10 @@
     "observed = observation_model()\n",
     "model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
-    "plot_image(ifft(simulated), fig, ax1)\n",
-    "plot_image(ifft(observed), fig, ax2)\n",
-    "plot_image(ifft(residuals), fig, ax3)\n",
-    "plt.tight_layout()\n"
+    "plot_image(irfft(simulated), fig, ax1)\n",
+    "plot_image(irfft(observed), fig, ax2)\n",
+    "plot_image(irfft(residuals), fig, ax3)\n",
+    "plt.tight_layout()"
    ]
   },
   {
