Specimen now serialize and are directly loaded from MRC files. MRC files must have voxel_size written in their metadata.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -45,16 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IO utils\n",
-    "from cryojax.io import load_grid_as_cloud"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Image simulator\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.utils import irfft, fftfreqs"
@@ -68,9 +58,7 @@
    "source": [
     "# Volume filename and metadata\n",
     "pixel_size = 5.28  # Angstroms\n",
-    "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\"\n",
-    "#pixel_size = 1.32  # Angstroms\n",
-    "#filename = \"3jar_13pf_bfm1_ps1_32.mrc\""
+    "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
    ]
   },
   {
@@ -81,7 +69,7 @@
    "source": [
     "# Configure image data and read template as point cloud\n",
     "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.5, eps=1e-5)\n",
-    "cloud = load_grid_as_cloud(filename, scattering, atol=1e-6)"
+    "cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)"
    ]
   },
   {
@@ -328,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
