overhaul to allow for optimization over any of the state, scattering, or specimen parameters. immediately needed to treat pixel_size as a parameter going forward.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -81,10 +81,10 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0)\n",
+    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=1.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
     "detector = cs.WhiteNoiseDetector(key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
-    "state = cs.ParameterState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
+    "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "im1 = plot_image(irfft(scattering_model()), fig, ax1)\n",
-    "im2 = plot_image(irfft(optics_model()), fig, ax2)\n",
+    "im2 = plot_image(irfft(optics_model(dict(pixel_size=1))), fig, ax2)\n",
     "im3 = plot_image(irfft(detector_model()), fig, ax3)\n",
     "plt.tight_layout()"
    ]
@@ -129,9 +129,9 @@
    "source": [
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
-    "micrograph = ice.sample(scattering.pixel_size * micrograph_freqs) * optics(micrograph_freqs) + detector.sample(scattering.pixel_size * micrograph_freqs)\n",
-    "whiten = cs.WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
+    "micrograph_freqs = fftfreqs((800, 600), pixel_size=pixel_size)\n",
+    "micrograph = ice.sample(micrograph_freqs) * optics(micrograph_freqs) + detector.sample(micrograph_freqs)\n",
+    "whiten = cs.WhiteningFilter(scattering.freqs, pixel_size * micrograph_freqs, micrograph)\n",
     "plot_image(irfft(whiten(detector_model())), fig, ax)"
    ]
   },
@@ -160,7 +160,7 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "filters = [cs.AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), cs.WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filters = [cs.AntiAliasingFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(irfft(filtered_model.render()), fig, ax)"
    ]
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_phi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0)\n",
+    "params = dict(view_phi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, pixel_size=5.30)\n",
     "jitted_model = jax.jit(lambda params: detector_model(params))"
    ]
   },
@@ -236,7 +236,7 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "masks = [cs.CircularMask(scattering.coords/scattering.pixel_size)]\n",
+    "masks = [cs.CircularMask(scattering.coords)]\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
     "observed = observation_model()\n",
     "model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
@@ -277,20 +277,6 @@
     "# Benchmark gradient\n",
     "%timeit grad = grad_loss(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
