Magnification is now an optics parameter. AntiAliasingFilter is now LowpassFilter for more general usage

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -108,7 +108,7 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "im1 = plot_image(irfft(scattering_model()), fig, ax1)\n",
-    "im2 = plot_image(irfft(optics_model(dict(pixel_size=1))), fig, ax2)\n",
+    "im2 = plot_image(irfft(optics_model()), fig, ax2)\n",
     "im3 = plot_image(irfft(detector_model()), fig, ax3)\n",
     "plt.tight_layout()"
    ]
@@ -160,7 +160,7 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "filters = [cs.AntiAliasingFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filters = [cs.LowpassFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(irfft(filtered_model.render()), fig, ax)"
    ]
@@ -195,8 +195,21 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_phi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, pixel_size=5.30)\n",
+    "params = dict(view_psi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, magnification=0.96)\n",
     "jitted_model = jax.jit(lambda params: detector_model(params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot model with updated parameters.\n",
+    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
+    "ax1, ax2 = axes\n",
+    "plot_image(irfft(optics_model()), fig, ax1)\n",
+    "plot_image(irfft(optics_model(params)), fig, ax2)"
    ]
   },
   {
