--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.5, eps=1e-5)\n",
+    "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.0, eps=1e-5)\n",
     "cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)"
    ]
   },
@@ -79,8 +79,8 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
-    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
+    "pose = cs.EulerPose(0.0, 0.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
+    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07, magnification=1.01)\n",
     "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=1.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
     "detector = cs.WhiteNoiseDetector(key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_psi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, magnification=0.96)\n",
+    "params = dict(view_psi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, magnification=0.8)\n",
     "jitted_model = jax.jit(lambda params: detector_model(params))"
    ]
   },
