pixel_size is a parameter instead of magnification (this is more physical, and PipelineState parameters should not depend on those in the ScatteringConfig.)

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "pixel_size = 5.28  # Angstroms\n",
+    "resolution = 5.28  # Angstroms\n",
     "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
    ]
   },
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.0, eps=1e-5)\n",
+    "scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=2.0, eps=1e-5)\n",
     "cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)"
    ]
   },
@@ -79,11 +79,11 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = cs.EulerPose(0.0, 0.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
-    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07, magnification=1.01)\n",
+    "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
+    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=1.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteNoiseDetector(key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
+    "detector = cs.WhiteNoiseDetector(pixel_size=5.16, key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
     "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
@@ -129,9 +129,9 @@
    "source": [
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "micrograph_freqs = fftfreqs((800, 600), pixel_size=pixel_size)\n",
+    "micrograph_freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
     "micrograph = ice.sample(micrograph_freqs) * optics(micrograph_freqs) + detector.sample(micrograph_freqs)\n",
-    "whiten = cs.WhiteningFilter(scattering.freqs, pixel_size * micrograph_freqs, micrograph)\n",
+    "whiten = cs.WhiteningFilter(scattering.freqs, detector.pixel_size * micrograph_freqs, micrograph)\n",
     "plot_image(irfft(whiten(detector_model())), fig, ax)"
    ]
   },
@@ -160,7 +160,7 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "filters = [cs.LowpassFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filters = [cs.LowpassFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, detector.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(irfft(filtered_model.render()), fig, ax)"
    ]
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_psi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, magnification=0.8)\n",
+    "params = dict(view_psi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0, pixel_size=5.0)\n",
     "jitted_model = jax.jit(lambda params: detector_model(params))"
    ]
   },
