--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -69,7 +69,9 @@
    "source": [
     "# Configure image data and read template as point cloud\n",
     "scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=2.0, eps=1e-5)\n",
-    "cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)"
+    "cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)\n",
+    "#scattering = cs.FourierSliceScattering(shape=(80, 80), resolution=resolution, pad_scale=1.5)\n",
+    "#cloud = cs.ElectronGrid.from_file(filename)"
    ]
   },
   {
@@ -79,9 +81,9 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
+    "pose = cs.EulerPose(offset_x=-50.0, offset_y=30.0, view_phi=np.pi / 4, view_theta=np.pi / 10, view_psi=-np.pi / 8)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=1.0)\n",
+    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
     "detector = cs.WhiteNoiseDetector(pixel_size=5.16, key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
     "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
