--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# Image simulator\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import irfft, fftfreqs"
+    "from cryojax.utils import fft, irfft, fftfreqs"
    ]
   },
   {
@@ -67,11 +67,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configure image data and read template as point cloud\n",
-    "scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=2.0, eps=1e-5)\n",
-    "cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)\n",
-    "#scattering = cs.FourierSliceScattering(shape=(128, 128), resolution=resolution, pad_scale=1.5)\n",
-    "#cloud = cs.ElectronGrid.from_file(filename)"
+    "# Configure image data and read template\n",
+    "#scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=1.0, eps=1e-5)\n",
+    "#cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)\n",
+    "scattering = cs.FourierSliceScattering(shape=(80, 80), resolution=resolution, pad_scale=1.5)\n",
+    "cloud = cs.ElectronGrid.from_file(filename)"
    ]
   },
   {
@@ -81,11 +81,12 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = cs.EulerPose(offset_x=-50.0, offset_y=30.0, view_phi=np.pi / 4, view_theta=np.pi / 2, view_psi=np.pi / 8)\n",
+    "#pose = cs.EulerPose(offset_x=-20.0, offset_y=30.0, view_phi=np.pi / 4, view_theta=np.pi / 2+np.pi/10, view_psi=np.pi / 8)\n",
+    "pose = cs.EulerPose(view_theta=jnp.pi/2+jnp.pi/10, view_psi=jnp.pi/4, offset_y=100.0)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
-    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3)\n",
+    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3, gamma=0.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteNoiseDetector(pixel_size=5.16, key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
+    "detector = cs.WhiteNoiseDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
     "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
@@ -95,9 +96,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
-    "optics_model = cs.OpticsImage(scattering=scattering, specimen=cloud, state=state)\n",
-    "detector_model = cs.DetectorImage(scattering=scattering, specimen=cloud, state=state)"
+    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=cloud, state=state)#, filters=[])\n",
+    "optics_model = cs.OpticsImage(scattering=scattering, specimen=cloud, state=state)#, filters=[])\n",
+    "detector_model = cs.DetectorImage(scattering=scattering, specimen=cloud, state=state)#, filters=[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot scattering in fourier space\n",
+    "fig, ax = plt.subplots(figsize=(3.25, 3.25))\n",
+    "im = plot_image(jnp.log(jnp.abs(fft(scattering_model.render()))), fig, ax)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -109,9 +122,9 @@
     "# Plot models\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = plot_image(irfft(scattering_model()), fig, ax1)\n",
-    "im2 = plot_image(irfft(optics_model()), fig, ax2)\n",
-    "im3 = plot_image(irfft(detector_model()), fig, ax3)\n",
+    "im1 = plot_image(scattering_model(), fig, ax1)\n",
+    "im2 = plot_image(optics_model(), fig, ax2)\n",
+    "im3 = plot_image(detector_model(), fig, ax3)\n",
     "plt.tight_layout()"
    ]
   },
@@ -134,7 +147,7 @@
     "micrograph_freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
     "micrograph = ice.sample(micrograph_freqs) * optics(micrograph_freqs) + detector.sample(micrograph_freqs)\n",
     "whiten = cs.WhiteningFilter(scattering.freqs, detector.pixel_size * micrograph_freqs, micrograph)\n",
-    "plot_image(irfft(whiten(detector_model())), fig, ax)"
+    "plot_image(irfft(whiten(fft(detector_model()))), fig, ax)"
    ]
   },
   {
@@ -164,7 +177,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "filters = [cs.LowpassFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, detector.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
-    "plot_image(irfft(filtered_model.render()), fig, ax)"
+    "plot_image(filtered_model.render(), fig, ax)"
    ]
   },
   {
@@ -210,8 +223,8 @@
     "# Plot model with updated parameters.\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
-    "plot_image(irfft(optics_model()), fig, ax1)\n",
-    "plot_image(irfft(optics_model(params)), fig, ax2)"
+    "plot_image(optics_model(), fig, ax1)\n",
+    "plot_image(optics_model(params), fig, ax2)"
    ]
   },
   {
@@ -256,9 +269,9 @@
     "observed = observation_model()\n",
     "model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
-    "plot_image(irfft(simulated), fig, ax1)\n",
-    "plot_image(irfft(observed), fig, ax2)\n",
-    "plot_image(irfft(residuals), fig, ax3)\n",
+    "plot_image(simulated, fig, ax1)\n",
+    "plot_image(observed, fig, ax2)\n",
+    "plot_image(residuals, fig, ax3)\n",
     "plt.tight_layout()"
    ]
   },
@@ -268,9 +281,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute likelihood\n",
-    "loss = lambda params: model(params)# jax.jit(lambda params: model(params))\n",
-    "grad_loss = jax.grad(lambda params: model(params))#jax.jit(jax.grad(lambda params: model(params)))"
+    "# Loss and gradient pipelines\n",
+    "loss = lambda params: model(params)\n",
+    "grad_loss = jax.grad(lambda params: model(params))"
    ]
   },
   {
@@ -279,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Benchmark jitted loss pipeline\n",
+    "# Benchmark loss pipeline\n",
     "%timeit likelihood = loss(params)"
    ]
   },
@@ -289,7 +302,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Benchmark gradient\n",
+    "# Benchmark gradient pipeline\n",
+    "%timeit grad = grad_loss(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jitted loss and gradient pipeline\n",
+    "grad_loss = jax.jit(jax.value_and_grad(lambda params: model(params)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark gradient pipeline\n",
     "%timeit grad = grad_loss(params)"
    ]
   },
