--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -68,9 +68,9 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template\n",
-    "#scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=1.0, eps=1e-5)\n",
-    "#cloud = cs.ElectronCloud.from_file(filename, atol=1e-6)\n",
-    "scattering = cs.FourierSliceScattering(shape=(80, 80), resolution=resolution, pad_scale=1.5)\n",
+    "# scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=1.2, eps=1e-5)\n",
+    "# cloud = cs.ElectronCloud.from_file(filename, atol=1e-8)\n",
+    "scattering = cs.FourierSliceScattering(shape=(80, 80), resolution=resolution, pad_scale=1.2)\n",
     "cloud = cs.ElectronGrid.from_file(filename)"
    ]
   },
@@ -81,8 +81,7 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "#pose = cs.EulerPose(offset_x=-20.0, offset_y=30.0, view_phi=np.pi / 4, view_theta=np.pi / 2+np.pi/10, view_psi=np.pi / 8)\n",
-    "pose = cs.EulerPose(view_theta=jnp.pi/2+jnp.pi/10, view_psi=jnp.pi/4, offset_y=100.0)\n",
+    "pose = cs.EulerPose(offset_x=-20.0, offset_y=30.0, view_phi=np.pi / 4, view_theta=np.pi / 2+np.pi/10, view_psi=np.pi / 8)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3, gamma=0.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
