simplifications so that only the central fourier slice coordinates are stored in ElectronGrid. bug caught in ifftshift, which fixes unecessary complications in map_coordinates

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's demonstrate the image formation pipeline in ``cryojax``."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plotting imports and function definitions\n",
     "from matplotlib import pyplot as plt\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable"
    ]
@@ -45,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Image simulator\n",
+    "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
     "from cryojax.utils import fft, irfft, fftfreqs"
    ]
@@ -57,21 +65,14 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "resolution = 5.28  # Angstroms\n",
     "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Configure image data and read template\n",
-    "scattering = cs.NufftScattering(shape=(80, 80), resolution=resolution, pad_scale=1.2, eps=1e-5)\n",
-    "cloud = cs.ElectronCloud.from_file(filename, atol=1e-8)\n",
-    "scattering = cs.FourierSliceScattering(shape=(80, 80), resolution=resolution, pad_scale=1.5)\n",
-    "cloud = cs.ElectronGrid.from_file(filename, pad_scale=1.5)"
+    "First we must read in our template into a given volume representation of the ``Specimen``."
    ]
   },
   {
@@ -80,24 +81,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize model, parameters, and compute image\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=-np.pi / 4, view_theta=np.pi / 2+np.pi/10, view_psi=np.pi / 8)\n",
+    "# Read template into either an ElectronCloud or ElectronGrid\n",
+    "#specimen = cs.ElectronCloud.from_file(filename, atol=1e-8)\n",
+    "specimen = cs.ElectronGrid.from_file(filename, pad_scale=1.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we have to choose a scattering (or in this case, projection) method. This will depend on the ``Specimen`` representation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure the image formation process\n",
+    "resolution = 5.28  # Angstroms\n",
+    "shape = (80, 80)\n",
+    "pad_scale = 1.2\n",
+    "#scattering = cs.NufftScattering(shape=shape, resolution=resolution, pad_scale=pad_scale, eps=1e-5)\n",
+    "scattering = cs.FourierSliceScattering(shape=shape, resolution=resolution, pad_scale=pad_scale)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, it's time to configure the image formation pipeline. This, at minimum, requires a ``Pose``. ``Optics`` models---in particular a model of the contrast transfer function---should also be included. Here, we also include models of the ``Ice``, ``Exposure`` to the electron beam, and the ``Detector``. Each of these models, except for the ``Pose``, also includes a null model. For example, by default the exposure model is ``NullIce``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the image formation pipeline\n",
+    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=np.pi / 7, view_theta=np.pi / 2-np.pi/8, view_psi=-np.pi / 8)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3, gamma=0.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteNoiseDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
+    "detector = cs.WhiteNoiseDetector(pixel_size=5.29, key=jax.random.PRNGKey(seed=1234), alpha=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compile the image formation pipeline into the PipelineState\n",
     "state = cs.PipelineState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can initialize our imaging models. Models are included that render images in the exit plane of the specimen (``ScatteringImage``), in the detector plane (``OpticsImage``), and from the detector readout (``DetectorImage``)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=cloud, state=state)#, filters=[])\n",
-    "optics_model = cs.OpticsImage(scattering=scattering, specimen=cloud, state=state)#, filters=[])\n",
-    "detector_model = cs.DetectorImage(scattering=scattering, specimen=cloud, state=state)#, filters=[])"
+    "# Image formation models\n",
+    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=specimen, state=state)\n",
+    "optics_model = cs.OpticsImage(scattering=scattering, specimen=specimen, state=state)\n",
+    "detector_model = cs.DetectorImage(scattering=scattering, specimen=specimen, state=state)"
    ]
   },
   {
@@ -128,6 +185,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Models can also include ``Filter``s. The following is a demonstration of a ``WhiteningFilter`` and a ``LowpassFilter``. These are precomputed upon initialization and applied automatically in the image formation pipeline. \n",
+    "\n",
+    "To compute a ``WhiteningFilter``, we first have to generate some synthetic data of structured noise from which we may compute its power spectrum."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -142,20 +208,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(irfft(micrograph).T, origin=\"lower\", cmap=\"gray\")\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the whitening filter looks right, empirically! Now generate an image at a colored noise model with a given whitening filter"
+    "We see that the whitening filter looks right, empirically! Now generate an image with the toy icy structured noise model with a given whitening filter. We will also apply a whitening filter for antialiasing."
    ]
   },
   {
@@ -166,8 +222,8 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "filters = [cs.LowpassFilter(scattering.padded_freqs), cs.WhiteningFilter(scattering.padded_freqs, detector.pixel_size * micrograph_freqs, micrograph)]\n",
-    "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
+    "filters = [cs.LowpassFilter(scattering.padded_freqs, cutoff=0.667), cs.WhiteningFilter(scattering.padded_freqs, detector.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filtered_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, filters=filters)\n",
     "plot_image(filtered_model.render(), fig, ax)"
    ]
   },
@@ -187,11 +243,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Computing an image is straight-forward, but really we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters."
+    "From all of the above, we see that computing an image is straight-forward. In practice, if we want to solve the inverse problem and find the model parameters that most likely generated the data, we want to define a function that can be arbitrarily transformed by JAX and evaulated at subsets of the parameters.\n",
+    "\n",
+    "``Image`` models can take in these dictionaries, search over existing parameters, and update them in the underlying models in the ``PipelineState`` or ``Specimen``. This search introduces some python overhead, which can be optimized away with ``jax.jit``."
    ]
   },
   {
@@ -214,8 +271,8 @@
     "# Plot model with updated parameters.\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
-    "plot_image(optics_model(), fig, ax1)\n",
-    "plot_image(optics_model(params), fig, ax2)"
+    "plot_image(detector_model(), fig, ax1)\n",
+    "plot_image(detector_model(params), fig, ax2)"
    ]
   },
   {
@@ -239,11 +296,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we can also use the model to compute the likelihood. Let's evaulate the likelihood at the simulated data, and visualize the residuals."
+    "Now, we can also use the model to compute a likelihood. For this, we can use the ``GaussianImage`` model. This is a subclass of the ``DetectorImage``, adding the ability to evaulate a likelihood. Let's evaulate the likelihood at the simulated data, and visualize the residuals."
    ]
   },
   {
@@ -256,14 +312,21 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "masks = [cs.CircularMask(scattering.coords)]\n",
-    "observation_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
+    "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=[], filters=[])\n",
     "observed = observation_model()\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
     "plot_image(residuals, fig, ax3)\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluating the ``GaussianImage`` with the observed data set will automatically evaulate the ``GausianImage.log_likelihood`` function."
    ]
   },
   {
@@ -329,7 +392,7 @@
   "kernelspec": {
    "display_name": "cryojax",
    "language": "python",
-   "name": "python3"
+   "name": "cryojax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -345,5 +408,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
