zyz rotation convention and initial template orientation matching with cisTEM. avoid unecessary 3D operations by changing fft conventions by removing translations from Specimen. cleanup.

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -102,7 +102,7 @@
     "# Configure the image formation process\n",
     "resolution = 5.28  # Angstroms\n",
     "shape = (80, 80)\n",
-    "pad_scale = 1.2\n",
+    "pad_scale = 1.5\n",
     "#scattering = cs.NufftScattering(shape=shape, resolution=resolution, pad_scale=pad_scale, eps=1e-5)\n",
     "scattering = cs.FourierSliceScattering(shape=shape, resolution=resolution, pad_scale=pad_scale)"
    ]
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "# Initialize the image formation pipeline\n",
-    "pose = cs.EulerPose(offset_x=0.0, offset_y=0.0, view_phi=np.pi / 7, view_theta=np.pi / 2-np.pi/8, view_psi=-np.pi / 8)\n",
+    "pose = cs.EulerPose(offset_x=-50.0, offset_y=20.0, view_phi=np.pi / 8, view_theta=np.pi / 2+np.pi/8, view_psi=np.pi / 7)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=1e-3, gamma=0.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
@@ -165,7 +165,7 @@
    "source": [
     "# Plot scattering in fourier space\n",
     "fig, ax = plt.subplots(figsize=(3.25, 3.25))\n",
-    "im = plot_image(jnp.log(jnp.abs(fft(scattering_model.render()))), fig, ax)\n",
+    "im = plot_image(jnp.log10(jnp.abs(scattering_model.render(view=False))), fig, ax)\n",
     "plt.tight_layout()"
    ]
   },
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# Instantiate image filters\n",
-    "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "micrograph_freqs = fftfreqs((800, 600), pixel_size=detector.pixel_size)\n",
     "micrograph = ice.sample(micrograph_freqs) * optics(micrograph_freqs) + detector.sample(micrograph_freqs)\n",
     "whiten = cs.WhiteningFilter(scattering.freqs, detector.pixel_size * micrograph_freqs, micrograph)\n",
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "# Show forward model for a whitened image\n",
-    "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "fig, ax = plt.subplots(figsize=(3.5, 3.5))\n",
     "filters = [cs.LowpassFilter(scattering.padded_freqs, cutoff=0.667), cs.WhiteningFilter(scattering.padded_freqs, detector.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, filters=filters)\n",
     "plot_image(filtered_model.render(), fig, ax)"
@@ -234,7 +234,7 @@
    "outputs": [],
    "source": [
     "# Visualize filters\n",
-    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
+    "fig, axes = plt.subplots(ncols=2, figsize=(7, 5))\n",
     "ax1, ax2 = axes\n",
     "antialias, whiten = filters\n",
     "im1 = plot_image(whiten.filter, fig, ax1, cmap=\"viridis\")\n",
@@ -312,7 +312,7 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "masks = [cs.CircularMask(scattering.coords)]\n",
-    "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=[], filters=[])\n",
+    "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state)\n",
     "observed = observation_model()\n",
     "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
@@ -392,7 +392,7 @@
   "kernelspec": {
    "display_name": "cryojax",
    "language": "python",
-   "name": "cryojax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
