resolution should belong to Specimen. can now be optimized over

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -82,8 +82,9 @@
    "outputs": [],
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
-    "#specimen = cs.ElectronCloud.from_file(filename, atol=1e-8)\n",
-    "specimen = cs.ElectronGrid.from_file(filename, pad_scale=1.5)"
+    "resolution = 5.28  # Angstroms\n",
+    "#specimen = cs.ElectronCloud.from_file(filename, resolution=resolution, config=dict(atol=1e-8))\n",
+    "specimen = cs.ElectronGrid.from_file(filename, resolution=resolution, config=dict(pad_scale=1.5))"
    ]
   },
   {
@@ -100,11 +101,10 @@
    "outputs": [],
    "source": [
     "# Configure the image formation process\n",
-    "resolution = 5.28  # Angstroms\n",
     "shape = (80, 80)\n",
     "pad_scale = 1.5\n",
-    "#scattering = cs.NufftScattering(shape=shape, resolution=resolution, pad_scale=pad_scale, eps=1e-5)\n",
-    "scattering = cs.FourierSliceScattering(shape=shape, resolution=resolution, pad_scale=pad_scale)"
+    "#scattering = cs.NufftScattering(shape=shape, pad_scale=pad_scale, eps=1e-5)\n",
+    "scattering = cs.FourierSliceScattering(shape=shape, pad_scale=pad_scale)"
    ]
   },
   {
