Image models are now serializable! Also separate out likelihood based models for future implementaations

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -311,10 +311,10 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "masks = [cs.CircularMask(scattering.coords)]\n",
+    "mask = cs.CircularMask(scattering.coords)\n",
     "observation_model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state)\n",
-    "observed = observation_model()\n",
-    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=masks, observed=observed)\n",
+    "observed = mask(observation_model())\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=specimen, state=state, masks=[mask], observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(simulated, fig, ax1)\n",
     "plot_image(observed, fig, ax2)\n",
