Following jax typing conventions, Scalar -> Parameter, and unpack model updates as kwargs

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -272,7 +272,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
     "plot_image(detector_model(), fig, ax1)\n",
-    "plot_image(detector_model(params), fig, ax2)"
+    "plot_image(detector_model(**params), fig, ax2)"
    ]
   },
   {
@@ -336,8 +336,8 @@
    "outputs": [],
    "source": [
     "# Loss and gradient pipelines\n",
-    "loss = lambda params: model(params)\n",
-    "grad_loss = jax.grad(lambda params: model(params))"
+    "loss = lambda params: model(**params)\n",
+    "grad_loss = jax.grad(lambda params: model(**params))"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "outputs": [],
    "source": [
     "# Jitted loss and gradient pipeline\n",
-    "grad_loss = jax.jit(jax.value_and_grad(lambda params: model(params)))"
+    "grad_loss = jax.jit(jax.value_and_grad(lambda params: model(**params)))"
    ]
   },
   {
@@ -379,13 +379,6 @@
     "# Benchmark gradient pipeline\n",
     "%timeit grad = grad_loss(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
